# HawpSystem

./: .env  .gitignore  README.md  UseModel.py  fuse_connections.py  hawpv2.yaml  main.py  mainTest.py  pyproject.toml  requirements.txt  test2.py
app/api/routes/: pdf_routes.py
app/core/: config.py
app/models/: model.py
app/services/: connection_finder.py  graph_builder.py  hawp_detector.py  pdf_service.py
app/utils/: box_utils.py  visualizer.py
hawp/base/csrc/: __init__.py
hawp/base/show/: painters.py
hawp/fsl/: train.py
hawp/fsl/config/: dataset.py  defaults.py  hawpv2.yaml  paths_catalog.py
hawp/fsl/config/models/: head.py  models.py  resnets.py
