[project]
name = "backend-ocr"
version = "0.1.0"
description = "Backend OCR service with FastAPI and PaddleOCR"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn",
    "python-dotenv>=1.2.1",
    "paddleocr>=3.3.1",
    "paddlepaddle>=3.2.1",
    "opencv-python>=4.12.0.88",
    "numpy>=2.0.2",
    "pydantic>=1.8.2",
    "ultralytics~=8.3.70",
    "torch~=2.6.0",
    "python-multipart>=0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
